bk_ida/gccida/g3/hash_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hash_rtx/src/cselib.c:1024:32: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  hash_rtx( rtx x, machine_mode mode, int create) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hash_rtx/src/cselib.c:1095:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v16 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hash_rtx/src/cselib.c:1138:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( *( _QWORD *)&rtwint[2 * v26 + 2] + 2LL), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hash_rtx/src/cselib.c:1148:27: error: use of undeclared identifier 'machine_mode'
v13 = cselib_lookup( x, ( machine_mode)*( ( unsigned __int8 *)x + 2), create); 
                          ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hash_rtx/src/obj/cselib.o] Error 1
